<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMsgACifrar"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietMsgACifrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_a_mensagem_a_cifrar"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/escolha_o_formato_da_mensagem"
        app:layout_constraintStart_toStartOf="@+id/tilMsgACifrar"
        app:layout_constraintTop_toBottomOf="@+id/tilMsgACifrar" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/msgFormatChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedChip="@id/plaintextChip"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/plaintextChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_simples" />

        <com.google.android.material.chip.Chip
            android:id="@+id/hexChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hexadecimal" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tvCipherMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/escolha_o_modo_de_cifragem"
        app:layout_constraintStart_toStartOf="@+id/msgFormatChipGroup"
        app:layout_constraintTop_toBottomOf="@+id/msgFormatChipGroup" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cipherModeChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedChip="@id/cipherChip"
        app:layout_constraintStart_toStartOf="@+id/tvCipherMode"
        app:layout_constraintTop_toBottomOf="@+id/tvCipherMode"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/cipherChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cifragem" />

        <com.google.android.material.chip.Chip
            android:id="@+id/decipherChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decifragem" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilChave"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/tilMsgACifrar"
        app:layout_constraintStart_toStartOf="@+id/tilMsgACifrar"
        app:layout_constraintTop_toBottomOf="@+id/cipherModeChipGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietChave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_a_chave_secreta"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTextoCifrado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/texto_cifrado_placeholder"
        app:layout_constraintEnd_toEndOf="@+id/tilChave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilChave" />

    <TextView
        android:id="@+id/tvTextoCifradoHexa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/texto_cifrado_em_hexadecimal_placeholder"
        app:layout_constraintEnd_toEndOf="@+id/tvTextoCifrado"
        app:layout_constraintStart_toStartOf="@+id/tvTextoCifrado"
        app:layout_constraintTop_toBottomOf="@+id/tvTextoCifrado" />

    <Button
        android:id="@+id/btCifrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/cifrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tilMsgACifrar"
        app:layout_constraintStart_toStartOf="@+id/tilMsgACifrar" />

</androidx.constraintlayout.widget.ConstraintLayout>